--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,192 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/4137f8921b.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="{{url_for('static', filename='style.css') }}"
-      rel="stylesheet"
-    />
-    <title>Job Tracker App</title>
-  </head>
-  <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a
-        class="navbar-brand"
-        href="https://github.com/breyr/jobtracker"
-        target="_blank"
-        ><i class="fa-brands fa-github"></i
-      ></a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <button
-              type="button"
-              class="btn custom-button mr-2"
-              data-toggle="modal"
-              data-target="#loginModal"
-            >
-              Login
-            </button>
-          </li>
-          <li class="nav-item">
-            <button
-              type="button"
-              class="btn custom-button"
-              data-toggle="modal"
-              data-target="#signupModal"
-            >
-              Sign Up
-            </button>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- Splash Page -->
-    <div class="splash-container mt-5">
-      <h1>Welcome to Job Tracker App</h1>
-      <p>Track your job applications seamlessly.</p>
-    </div>
-
-    <!-- Login Modal -->
-    <div
-      class="modal fade"
-      id="loginModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="loginModalLabel"
-      aria-hidden="true"
+{% extends 'base.html' %} {% block title %}Home{% endblock %} {% block nav %}
+<ul class="navbar-nav">
+  <li class="nav-item">
+    <button
+      type="button"
+      class="btn custom-button mr-3"
+      data-toggle="modal"
+      data-target="#loginModal"
     >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content auth-modal">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModalLabel">
-              Login to Job Tracker
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <!-- Login Form -->
-            <form method="POST" action="/login">
-              <div class="form-group">
-                <label for="loginUsername">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="loginUsername"
-                  name="email"
-                  placeholder="Enter your email"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="loginPassword">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="loginPassword"
-                  name="password"
-                  placeholder="Enter your password"
-                  required
-                />
-              </div>
-              <button type="submit" class="btn modal-button btn-block">
-                Login
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Signup Modal -->
-    <div
-      class="modal fade"
-      id="signupModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="signupModalLabel"
-      aria-hidden="true"
+      Login
+    </button>
+  </li>
+  <li class="nav-item">
+    <button
+      type="button"
+      class="btn custom-button"
+      data-toggle="modal"
+      data-target="#signupModal"
     >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content auth-modal">
-          <div class="modal-header">
-            <h5 class="modal-title" id="signupModalLabel">
-              Sign Up for Job Tracker
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <!-- Signup Form -->
-            <form method="post" action="/register">
-              <div class="form-group">
-                <label for="signupUsername">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="signupUsername"
-                  name="email"
-                  placeholder="Enter your email"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="signupPassword">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="signupPassword"
-                  name="password"
-                  placeholder="Enter your password"
-                  required
-                />
-              </div>
-              <button type="submit" class="btn modal-button btn-block">
-                Sign Up
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+      Sign Up
+    </button>
+  </li>
+</ul>
+{% endblock %} {% block content %}
 
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        Made with&nbsp;<span style="color: #e25555">&hearts;</span
-        >&nbsp;by&nbsp;<a href="#">Brey Rivera</a>&nbsp;&&nbsp;<a href="#"
-          >Cole Baugh</a
+<!-- Splash Page -->
+<div class="splash-container mt-5">
+  <h1>Welcome to Job Tracker App</h1>
+  <p>Track your job applications seamlessly.</p>
+</div>
+
+<!-- Login Modal -->
+<div
+  class="modal fade"
+  id="loginModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="loginModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content auth-modal">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login to Job Tracker</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
         >
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-    </footer>
+      <div class="modal-body">
+        <!-- Login Form -->
+        <form method="POST" action="/login">
+          <div class="form-group">
+            <label for="loginUsername">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="loginUsername"
+              name="email"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="loginPassword">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="loginPassword"
+              name="password"
+              placeholder="Enter your password"
+              required
+            />
+          </div>
+          <button type="submit" class="btn modal-button btn-block">
+            Login
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  </body>
-</html>
+<!-- Signup Modal -->
+<div
+  class="modal fade"
+  id="signupModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="signupModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content auth-modal">
+      <div class="modal-header">
+        <h5 class="modal-title" id="signupModalLabel">
+          Sign Up for Job Tracker
+        </h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Signup Form -->
+        <form method="post" action="/register">
+          <div class="form-group">
+            <label for="signupUsername">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="signupUsername"
+              name="email"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="signupPassword">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="signupPassword"
+              name="password"
+              placeholder="Enter your password"
+              required
+            />
+          </div>
+          <button type="submit" class="btn modal-button btn-block">
+            Sign Up
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
