feat: Refactord /deleteapp to handle Ajax requests

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -175,15 +175,13 @@
         </form>
       </div>
       <div class="modal-footer">
-        <form method="POST" action="/deleteapp" id="deleteAppForm">
-          <input
-            type="hidden"
-            name="delapplicationid"
-            id="delapplicationid"
-            value=""
-          />
-          <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
+        <input
+          type="hidden"
+          name="delapplicationid"
+          id="delapplicationid"
+          value=""
+        />
+        <button type="button" class="btn btn-danger">Delete</button>
         <button type="button" class="btn btn-outline-danger">Close</button>
       </div>
     </div>
