--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -116,7 +116,7 @@
         </h5>
       </div>
       <div class="modal-body">
-        <form method="POST" action="/updateapp" id="updateAppForm">
+        <section id="updateAppForm">
           <div class="mb-3">
             <label for="company" class="form-label">Company</label>
             <input
@@ -169,10 +169,7 @@
             id="saveapplicationid"
             value=""
           />
-          <button type="submit" class="btn btn-outline-dark">
-            Save Changes
-          </button>
-        </form>
+        </section>
       </div>
       <div class="modal-footer">
         <input
@@ -181,8 +178,15 @@
           id="delapplicationid"
           value=""
         />
-        <button type="button" class="btn btn-danger">Delete</button>
-        <button type="button" class="btn btn-outline-danger">Close</button>
+        <button type="button" class="btn btn-outline-dark" id="saveappbtn">
+          Save Changes
+        </button>
+        <button type="button" class="btn btn-danger" id="deleteappbtn">
+          Delete
+        </button>
+        <button type="button" class="btn btn-outline-danger" id="closeappbtn">
+          Close
+        </button>
       </div>
     </div>
   </div>
@@ -255,11 +259,15 @@
               placeholder="Location, rate, anything you would like to note..."
             ></textarea>
           </div>
-          <button type="submit" class="btn btn-outline-dark">Add</button>
+          <button type="submit" class="btn btn-outline-dark" id="addappbutton">
+            Add
+          </button>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-danger">Close</button>
+        <button type="button" class="btn btn-outline-danger" id="closeappbtn">
+          Close
+        </button>
       </div>
     </div>
   </div>
