--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,9 +1,3 @@
-/* colors
-    #41ead4
-    #fbff12
-    #ffffff
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
 * {
@@ -47,7 +41,7 @@ nav i:hover {
 }
 
 .splash-container p {
-  color: #fbff12;
+  color: #7458ab;
 }
 
 .auth-modal {
