feat: Error alerts for adding/saving applications

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,7 +30,7 @@
         {% block nav %}{% endblock %}
       </div>
     </nav>
-
+    <section id="errors"></section>
     {% block content %}{% endblock %}
 
     <!-- Footer -->
