--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -178,7 +178,7 @@
           id="delapplicationid"
           value=""
         />
-        <button type="button" class="btn btn-outline-dark" id="saveappbtn">
+        <button type="button" class="btn btn-dark" id="saveappbtn">
           Save Changes
         </button>
         <button type="button" class="btn btn-danger" id="deleteappbtn">
@@ -262,9 +262,7 @@
         </section>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" id="addappbtn">
-          Add
-        </button>
+        <button type="button" class="btn btn-dark" id="addappbtn">Add</button>
         <button type="button" class="btn btn-outline-danger" id="closeappbtn">
           Close
         </button>
