--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -113,7 +113,7 @@
       </div>
       <div class="modal-body">
         <!-- Signup Form -->
-        <form method="post" action="/register">
+        <section id="signupForm">
           <div class="form-group">
             <label for="signupUsername">Email</label>
             <input
@@ -122,7 +122,6 @@
               id="signupEmail"
               name="email"
               placeholder="Enter your email"
-              required
             />
           </div>
           <div class="form-group">
@@ -133,17 +132,21 @@
               id="signupPassword"
               name="password"
               placeholder="Enter your password"
-              required
             />
           </div>
-          <button type="submit" class="btn modal-button btn-block">
+          <button
+            type="submit"
+            class="btn custom-button-solid btn-block"
+            id="signupbtn"
+          >
             Sign Up
           </button>
-        </form>
+        </section>
       </div>
     </div>
   </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="{{ url_for('static', filename='login.js') }}"></script>
+<script src="{{ url_for('static', filename='signup.js') }}"></script>
 {% endblock %}
