--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,9 +1,7 @@
-{% extends 'base.html' %} {% block title %}Dashboard{% endblock %} {%block nav
+{% extends 'base.html' %} {% block title %}Dashboard{% endblock %} {% block nav
 %}
 <ul class="navbar-nav align-items-center w-100">
-  <li class="nav-item text-light mr-auto">
-    Hello, {{ session['email'].split('@')[0] }}
-  </li>
+  <li class="nav-item text-light mr-auto">Hello, {{ email.split('@')[0] }}</li>
   <button class="btn btn-outline-light mr-3" id="add-application-btn">
     + application
   </button>
@@ -12,93 +10,45 @@
   </form>
 </ul>
 {% endblock %} {% block content %}
-<div class="container mt-3">
-  <div class="d-flex justify-content-around text-center">
-    <div class="p-2 w-25">
-      <h2>Applied</h2>
-      <section class="status-container" id="applied">
-        {% for application in applied %}
-        <div class="application" id="{{ application.id }}">
-          <p class="company">
-            {{ application.company }}
-            <a
-              href="{{application.posting_link}}"
-              target="_blank"
-              class="posting-link"
-              ><i class="fa-solid fa-link"></i
-            ></a>
-          </p>
-          <p class="position">{{ application.position }}</p>
-          <p class="description">{{ application.description }}</p>
-        </div>
-        {% endfor %}
-      </section>
-    </div>
-    <div class="p-2 w-25">
-      <h2>Phone Interview</h2>
-      <section class="status-container" id="phoneinterview">
-        {% for application in phone_interview %}
-        <div class="application" id="{{ application.id }}">
-          <p class="company">
-            {{ application.company }}
-            <a
-              href="{{application.posting_link}}"
-              target="_blank"
-              class="posting-link"
-              ><i class="fa-solid fa-link"></i
-            ></a>
-          </p>
-          <p class="position">{{ application.position }}</p>
-          <p class="description">{{ application.description }}</p>
-        </div>
-        {% endfor %}
-      </section>
-    </div>
-    <div class="p-2 w-25">
-      <h2>Interview</h2>
-      <section class="status-container" id="interview">
-        {% for application in interview %}
-        <div class="application" id="{{ application.id }}">
-          <p class="company">
-            {{ application.company }}
-            <a
-              href="{{application.posting_link}}"
-              target="_blank"
-              class="posting-link"
-              ><i class="fa-solid fa-link"></i
-            ></a>
-          </p>
-          <p class="position">{{ application.position }}</p>
-          <p class="description">{{ application.description }}</p>
-        </div>
-        {% endfor %}
-      </section>
-    </div>
-    <div class="p-2 w-25">
-      <h2>Offer/Rejected</h2>
-      <section class="status-container" id="offer-or-reject">
-        {% for application in offer_rejected %}
-        <div
-          class="application {{ application.status }}"
-          id="{{ application.id }}"
-        >
-          <p class="company">
-            {{ application.company }}
-            <a
-              href="{{application.posting_link}}"
-              target="_blank"
-              class="posting-link"
-              ><i class="fa-solid fa-link"></i
-            ></a>
-          </p>
-          <p class="position">{{ application.position }}</p>
-          <p class="description">{{ application.description }}</p>
-        </div>
-        {% endfor %}
-      </section>
-    </div>
-  </div>
-</div>
+<section class="container mt-2">
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr>
+        <th><i class="fa-solid fa-trash-can" id="deleteappbtn"></i></th>
+        <th>Edit</th>
+        <th>Status <i class="fa-solid fa-sort"></i></th>
+        <th>Company <i class="fa-solid fa-sort"></i></th>
+        <th>Position <i class="fa-solid fa-sort"></i></th>
+        <th>Description <i class="fa-solid fa-sort"></i></th>
+        <th>Posting Link</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for application in applications %}
+      <tr id="{{ application.id }}">
+        <td>
+          <input type="checkbox" value="{{ application.id }}" />
+        </td>
+        <td id="{{ application.id }}">
+          <i class="fa-solid fa-pen-to-square" id="edit"></i>
+        </td>
+        <td>{{ application.status }}</td>
+        <td>{{ application.company }}</td>
+        <td>{{ application.position }}</td>
+        <td>{{ application.description }}</td>
+        <td>
+          <a
+            href="{{application.posting_link}}"
+            target="_blank"
+            class="posting-link"
+            ><i class="fa-solid fa-link"></i
+          ></a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</section>
 
 <!-- Modal for updating application -->
 <div
@@ -148,7 +98,7 @@
             <label for="status" class="form-label">Status</label>
             <select class="form-control" id="status" name="status">
               <option value="applied">Applied</option>
-              <option value="phoneinterview">Phone Interview</option>
+              <option value="phone interview">Phone Interview</option>
               <option value="interview">Interview</option>
               <option value="offered">Offered</option>
               <option value="rejected">Rejected</option>
@@ -180,9 +130,6 @@
         />
         <button type="button" class="btn btn-dark" id="saveappbtn">
           Save Changes
-        </button>
-        <button type="button" class="btn btn-danger" id="deleteappbtn">
-          Delete
         </button>
         <button type="button" class="btn btn-outline-danger" id="closeappbtn">
           Close
@@ -243,7 +190,7 @@
             <label for="status" class="form-label">Status</label>
             <select class="form-control" id="status" name="status">
               <option value="applied">Applied</option>
-              <option value="phoneinterview">Phone Interview</option>
+              <option value="phone interview">Phone Interview</option>
               <option value="interview">Interview</option>
               <option value="offered">Offered</option>
               <option value="rejected">Rejected</option>
@@ -273,4 +220,4 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
-{% endblock %}
+{ {% endblock %}
