--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -10,7 +10,7 @@
   </form>
 </ul>
 {% endblock %} {% block content %}
-<section class="container mt-2">
+<section class="apps-container mt-2">
   <table class="table table-dark table-striped">
     <thead>
       <tr>
