--- a/src/static/style.css
+++ b/src/static/style.css
@@ -105,3 +105,7 @@ i:hover {
   scrollbar-width: thin;
   scrollbar-color: rgba(121, 121, 121, 0.5) transparent;
 }
+
+table tbody tr:hover {
+  cursor: pointer;
+}
