--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -11,11 +11,10 @@
 </ul>
 {% endblock %} {% block content %}
 <section class="apps-container mt-2">
-  <table class="table table-dark table-striped">
+  <table class="table table-dark table-hover">
     <thead>
       <tr>
         <th><i class="fa-solid fa-trash-can" id="deleteappbtn"></i></th>
-        <th>Edit</th>
         <th>Status <i class="fa-solid fa-sort"></i></th>
         <th>Company <i class="fa-solid fa-sort"></i></th>
         <th>Position <i class="fa-solid fa-sort"></i></th>
@@ -28,9 +27,6 @@
       <tr id="{{ application.id }}">
         <td>
           <input type="checkbox" value="{{ application.id }}" />
-        </td>
-        <td id="{{ application.id }}">
-          <i class="fa-solid fa-pen-to-square" id="edit"></i>
         </td>
         <td>{{ application.status }}</td>
         <td>{{ application.company }}</td>
@@ -65,7 +61,7 @@
           Application Modal Title
         </h5>
       </div>
-      <div class="modal-body">
+      <div class="modal-body px-4">
         <section id="updateAppForm">
           <div class="mb-3">
             <label for="company" class="form-label">Company</label>
@@ -154,7 +150,7 @@
           New Application
         </h5>
       </div>
-      <div class="modal-body">
+      <div class="modal-body px-4">
         <section id="application-form">
           <div class="mb-3">
             <label for="company" class="form-label">Company</label>
