feat: Added last updated column

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -20,6 +20,7 @@
         <th>Position <i class="fa-solid fa-sort"></i></th>
         <th>Description <i class="fa-solid fa-sort"></i></th>
         <th>Posting Link</th>
+        <th>Last Updated <i class="fa-solid fa-sort"></i></th>
       </tr>
     </thead>
     <tbody>
@@ -40,6 +41,7 @@
             ><i class="fa-solid fa-link"></i
           ></a>
         </td>
+        <td>{{ application.xata.updatedAt|format_date }}</td>
       </tr>
       {% endfor %}
     </tbody>
