--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -15,12 +15,12 @@
     <thead>
       <tr>
         <th><i class="fa-solid fa-trash-can" id="deleteappbtn"></i></th>
-        <th>Status <i class="fa-solid fa-sort"></i></th>
-        <th>Company <i class="fa-solid fa-sort"></i></th>
-        <th>Position <i class="fa-solid fa-sort"></i></th>
-        <th>Description <i class="fa-solid fa-sort"></i></th>
+        <th>Status <i class="fa-solid fa-sort" id="status-sort"></i></th>
+        <th>Company <i class="fa-solid fa-sort" id="company-sort"></i></th>
+        <th>Position <i class="fa-solid fa-sort" id="position-sort"></i></th>
+        <th>Description</th>
         <th>Posting Link</th>
-        <th>Last Updated <i class="fa-solid fa-sort"></i></th>
+        <th>Last Updated <i class="fa-solid fa-sort" id="date-sort"></i></th>
       </tr>
     </thead>
     <tbody>
@@ -218,4 +218,5 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+<script src="{{ url_for('static', filename='sort.js') }}"></script>
 { {% endblock %}
