feat: Sorting with Priority Queue :), bug with date sorting

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -15,12 +15,20 @@
     <thead>
       <tr>
         <th><i class="fa-solid fa-trash-can" id="deleteappbtn"></i></th>
-        <th>Status <i class="fa-solid fa-sort" id="status-sort"></i></th>
-        <th>Company <i class="fa-solid fa-sort" id="company-sort"></i></th>
-        <th>Position <i class="fa-solid fa-sort" id="position-sort"></i></th>
+        <th id="status">
+          Status <i class="fa-solid fa-sort" id="status-sort"></i>
+        </th>
+        <th id="company">
+          Company <i class="fa-solid fa-sort" id="company-sort"></i>
+        </th>
+        <th id="positon">
+          Position <i class="fa-solid fa-sort" id="position-sort"></i>
+        </th>
         <th>Description</th>
         <th>Posting Link</th>
-        <th>Last Updated <i class="fa-solid fa-sort" id="date-sort"></i></th>
+        <th id="date">
+          Last Updated <i class="fa-solid fa-sort" id="date-sort"></i>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -217,6 +225,8 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src=" https://cdn.jsdelivr.net/npm/js-priority-queue@0.1.5/priority-queue.min.js "></script>
 <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
 <script src="{{ url_for('static', filename='sort.js') }}"></script>
+<script src="{{ url_for('static', filename='pq.js') }}"></script>
 { {% endblock %}
