feat: Updated rowObjects to be object instead of array

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -21,7 +21,7 @@
         <th id="company">
           Company <i class="fa-solid fa-sort" id="company-sort"></i>
         </th>
-        <th id="positon">
+        <th id="position">
           Position <i class="fa-solid fa-sort" id="position-sort"></i>
         </th>
         <th>Description</th>
@@ -227,6 +227,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src=" https://cdn.jsdelivr.net/npm/js-priority-queue@0.1.5/priority-queue.min.js "></script>
 <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
-<script src="{{ url_for('static', filename='sort.js') }}"></script>
-<script src="{{ url_for('static', filename='pq.js') }}"></script>
-{ {% endblock %}
+{% endblock %}
